.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddrpayment-deployment
  namespace: ddr-payment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ddrpayment-deployment
  template:
    metadata:
      labels:
        app: ddrpayment-deployment
    spec:
      containers:
      - name: ddrpayment-deployment
        image: ddrpayment.modernapp.bbl:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7212
