.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddrpayment-service
  namespace: ddr-payment
spec:
  selector:
    app: ddrpayment-deployment
  ports:
    - protocol: TCP
      port: 7212
      targetPort: 7212
