.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddrpayment-ingress
  namespace: ddr-payment
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "ddrpayment.modernapp.bbl"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ddrpayment-service
            port:
              number: 7212
